# rosrustext_examples

./: .gitignore  LICENCE  README.md  Scratchpad:  Scratchpad: Lesson 04 Intent  Scratchpad_2.md  TODO.md  action_log.txt  entry_points_dump.txt  rustfmt.toml  test_m.sh  test_pgid.sh
Intent/: Lesson 06 Intent  Lesson 06--09 Intent.md
capstone/: capstone_README.md  capstone_ideas.md
docs/: CRITIQUE.md  INTENT.md  PHILOSOPHY.md  TODO.md
scripts/: README.md  build_all.sh  clean_all.sh  env_setup.sh  test_all.sh
src/1_python/lesson_06_lifecycle/: README.md  THEORY.md  package.xml  setup.cfg  setup.py
src/1_python/lesson_06_lifecycle/lesson_06_lifecycle_py/: logic.py  publisher_node.py  subscriber_node.py  utils.py
src/1_python/lesson_06_lifecycle/test/: test_unit.py
src/1_python/lesson_09_composition/: README.md  THEORY.MD  package.xml  setup.cfg  setup.py
src/1_python/lesson_09_composition/lesson_09_composition/: deployment.py
src/1_python/lesson_10_launch/: PROFILE_B_GAP.md  README.md  THEORY.md  package.xml  setup.cfg  setup.py
src/1_python/lesson_10_launch/launch/: composed.launch.py  isolated.launch.py
src/1_python/lesson_10_launch/lesson_10_launch/: verification.py  verify_fault_tolerance.py
src/2_cpp/: README.md
src/2_cpp/lesson_00_bootstrap/: CMakeLists.txt  README.md  lesson_breakdown.md  package.xml
src/2_cpp/lesson_00_bootstrap/include/lesson_00_bootstrap_cpp/: bootstrap_node.hpp
src/2_cpp/lesson_00_bootstrap/src/: bootstrap_node.cpp
src/2_cpp/lesson_01_node/: CMakeLists.txt  THEORY.md  lesson.md  lesson_breaddown.md  lesson_breakdown.md  package.xml
src/2_cpp/lesson_01_node/include/lesson_01_node_cpp/: lesson.hpp
src/2_cpp/lesson_01_node/src/: lesson.cpp
src/2_cpp/lesson_02_publisher/: CMakeLists.txt  lesson.md  lesson_breakdown.md  package.xml
src/2_cpp/lesson_02_publisher/include/lesson_02_publisher/: lesson_02_publisher.hpp
src/2_cpp/lesson_02_publisher/include/lesson_02_publisher_cpp/: publisher_node.hpp
src/2_cpp/lesson_02_publisher/src/: lesson_02_publisher.cpp  publisher_node.cpp
src/2_cpp/lesson_03_subscriber/: CMakeLists.txt  lesson.md  lesson_breakdown.md  package.xml
src/2_cpp/lesson_03_subscriber/include/lesson_03_subscriber/: lesson_03_subscriber.hpp
src/2_cpp/lesson_03_subscriber/src/: lesson_03_subscriber.cpp  subscriber_node.cpp
src/2_cpp/lesson_04_service/: CMakeLists.txt  README.md  THEORY.md  lesson.md  package.xml
src/2_cpp/lesson_04_service/include/lesson_04_service/: client_node.hpp  service_node.hpp  stats_logic.hpp
src/2_cpp/lesson_04_service/src/: client_node.cpp  service_node.cpp
src/2_cpp/lesson_04_service/test/: test_stats_logic.cpp
src/2_cpp/lesson_05_parameters/: CMakeLists.txt  README.md  THEORY.md  package.xml
src/2_cpp/lesson_05_parameters/include/lesson_05_parameters/: logic.hpp  publisher.hpp  subscriber.hpp  utils.hpp
src/2_cpp/lesson_05_parameters/src/: publisher.cpp  subscriber.cpp
src/2_cpp/lesson_05_parameters/test/: test.cpp
src/2_cpp/lesson_06_lifecycle/: CMakeLists.txt  README.md  THEORY.md  package.xml
src/2_cpp/lesson_06_lifecycle/include/lesson_06_lifecycle/: logic.hpp  publisher.hpp  subscriber.hpp  utils.hpp
src/2_cpp/lesson_06_lifecycle/src/: publisher.cpp  subscriber.cpp
src/2_cpp/lesson_06_lifecycle/test/: test_integration.py  test_unit.cpp
src/2_cpp/lesson_07_actions/: CMakeLists.txt  README.md  THEORY.md  package.xml
src/2_cpp/lesson_07_actions/include/lesson_07_actions/: action_client_node.hpp  action_server.hpp  action_server_node.hpp  logic.hpp  utils.hpp
src/2_cpp/lesson_07_actions/src/: action_client_node.cpp  action_server.cpp  action_server_node.cpp
src/2_cpp/lesson_07_actions/test/: test_integration.py  test_unit.cpp
src/2_cpp/lesson_08_executors/: CMakeLists.txt  README.md  THEORY.md  package.xml
src/2_cpp/lesson_08_executors/include/lesson_08_executors/: action_client_node.hpp  action_server.hpp  action_server_node.hpp  logic.hpp  utils.hpp
src/2_cpp/lesson_08_executors/src/: action_client_node.cpp  action_server.cpp  action_server_node.cpp
src/2_cpp/lesson_08_executors/test/: test_integration.py  test_unit.cpp
src/2_cpp/lesson_09_composition_cpp/: CMakeLists.txt  README.md  THEORY.md  package.xml  topic_09_evidence.md
src/2_cpp/lesson_10_launch_cpp/: CMakeLists.txt  README.md  package.xml
src/2_cpp/lesson_10_launch_cpp/launch/: composed.launch.py  isolated.launch.py
src/2_cpp/lesson_10_launch_cpp/test/: verify_fault_tolerance.py
src/2_cpp/utils_cpp/: CMakeLists.txt  README.md  package.xml
src/2_cpp/utils_cpp/include/utils_cpp/: qos.hpp  services.hpp  topics.hpp  utils.hpp
src/3_rust/utils_rust/: Cargo.toml  package.xml
src/3_rust/utils_rust/src/: qos.rs  services.rs  topics.rs
src/4_interfaces/: CMakeLists.txt  README.md  package.xml
src/4_interfaces/config/: services_config.yaml  topics_config.yaml
src/4_interfaces/lesson_interfaces/: CMakeLists.txt  README.md  package.xml
src/4_interfaces/lesson_interfaces/config/: qos_config.yaml  services_config.yaml  topics_config.yaml
src/4_interfaces/lesson_interfaces/srv/: ComputeStats.srv
src/4_interfaces/rcl_interfaces/action_msgs/: package.xml
src/4_interfaces/rcl_interfaces/builtin_interfaces/: package.xml
src/4_interfaces/rcl_interfaces/lifecycle_msgs/: package.xml
src/4_interfaces/rcl_interfaces/rcl_interfaces/: package.xml
src/4_interfaces/rcl_interfaces/service_msgs/: package.xml
src/4_interfaces/rosidl_rust/rosidl_generator_rs/resource/: Cargo.toml.em
src/4_interfaces/unique_identifier_msgs/: package.xml
src/4_interfaces/vendor_dummy/builtin_interfaces/: Cargo.toml
src/4_interfaces/vendor_dummy/service_msgs/: Cargo.toml
templates/: README.md
templates/cpp/: CMakeLists.txt  README.md  package.xml
templates/cpp/include/lesson_cpp_template/: lesson_node.hpp  qos.hpp  services.hpp  topics.hpp
templates/cpp/src/: lesson_node.cpp
templates/rcllibrust/: Cargo.toml  README.md
templates/rcllibrust/src/: main.rs  services.rs  topics.rs
templates/rclrs/: Cargo.toml  README.md  package.xml
templates/rclrs/src/: main.rs  qos.rs
(+288 files in other folders)
