<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lesson_rclrs_template</name>
  <version>0.1.0</version>
  <description>Template Rust ROS 2 node package.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cargo</buildtool_depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>