<?xml version="1.0"?>
<package format="3">
  <name>lesson_06_lifecycle_py</name>
  <version>0.1.0</version>
  <description>Lesson 06 (Python): lifecycle publisher + subscriber node.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>utils_py</exec_depend>
  <exec_depend>lesson_interfaces</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
