<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lesson_09_composition</name>
  <version>0.0.0</version>
  <description>Lesson 09 (Python): Composed deployment.</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>lesson_06_lifecycle</depend>
  <depend>lesson_06_orchestration</depend>
  <depend>lesson_07_actions</depend>
  <depend>lesson_08_executors</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
