<?xml version="1.0"?>
<package format="3">
  <name>lesson_00_bootstrap_cpp</name>
  <version>0.1.0</version>
  <description>Lesson 00 (C++): workspace bootstrap.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
