<?xml version="1.0"?>
<package format="3">
  <name>utils_cpp</name>
  <version>0.1.0</version>
  <description>Shared C++ utilities for lessons.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
