<?xml version="1.0"?>
<package format="3">
  <name>utils_rust</name>
  <version>0.1.0</version>
  <description>Shared utils for Rust lessons</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cargo</buildtool_depend>
  <depend>rclrs</depend>
  
  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
